Upgrade Java version to 21 and update maven-compiler-plugin